--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#services" class="nav-link">Services</a></li>
+                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="#footer" class="nav-link">Footer</a></li>
                 </ul>
             </nav>
         </header>
@@ -147,5 +149,73 @@
             </div>
         </div>
     </div>
+
+    <div class="container-3" id="contact">
+        <div class="left">
+            <h1>Contact Us</h1>
+            <p>Feel Free to contact us any time. We will back to you as soon as we can.</p>
+            <div class="form">
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="text" placeholder="Message">
+                <button>SEND</button>
+            </div>
+        </div>
+        <div class="right">
+            <h1>Info</h1>
+            <div class="icon-and-text">
+                <div class="social-icons">
+                    <a href=""><i class="fa fa-inbox" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-phone" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-building" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-clock-o" aria-hidden="true"></i></a>
+                </div>
+                <div class="text-container">
+                    <p>sagarsahu9510@gmail.com</p>
+                    <p>7873630650</p>
+                    <p>Jeypore, Koraput</p>
+                    <p>Not Available Currently</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <footer id="footer">
+        <div class="footer-content">
+            <div class="first-col">
+                <h2 class="follow-text">Follow Us</h2>
+                <div class="Social-icons">
+                    <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                </div>
+            </div>
+            <div class="second-col">
+                <p class="footer-head">Shop</p>
+                <a href="">New In</a>
+                <a href="">Shoes</a>
+                <a href="">Bags</a>
+                <a href="">T-Shirts</a>
+            </div>
+            <div class="third-col">
+                <p class="footer-head">Information</p>
+                <a href="">About us</a>
+                <a href="">Customer</a>
+                <a href="">Service</a>
+                <a href="">Collection</a>
+            </div>
+            <div class="fourth-col">
+                <p class="footer-head">Press</p>
+                <a href="">Press Release</a>
+                <a href="">Awards</a>
+                <a href="">Testimonials</a>
+                <a href="">Timeline</a>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
